ready to start adding vulkan and such.

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -1,7 +1,8 @@
-
 add_executable(jellyApp ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 
 target_link_libraries(jellyApp jellyCore)
+
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT)
 
 install(TARGETS jellyApp
         CONFIGURATIONS Debug
